--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -3,7 +3,8 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #141010 !default;
+/* $background-color: #141010 !default; */
+$background-color: #2c3a10 !default;
 $text-color: #fff6fb !default;
 $primary-color: #0d8817 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
