--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -7,8 +7,8 @@
 $background-color: #2c3a10 !default;
 $text-color: #fff6fb !default;
 $primary-color: #0d8817 !default;
-/* $border-color: mix(#fff, $background-color, 20%) !default; */
-$border-color: mix(#303030, $background-color, 20%) !default;
+$border-color: mix(#fff, $background-color, 20%) !default;
+/* $border-color: mix(#303030, $background-color, 20%) !default; */
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
