--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -5,6 +5,7 @@
 /* Colors */
 $background-color: #141010 !default;
 /* $background-color: #2c3a10 !default; - BAD */
+
 $text-color: #fff6fb !default;
 $primary-color: #0d8817 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
@@ -13,7 +14,7 @@ $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: mix($primary-color, #000, 10%) !default;
-$link-color: $primary-color !default;
+$link-color: #0084ff !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
 $link-color-visited: mix(#000, $link-color, 25%) !default;
 $masthead-link-color: $text-color !default;
